--- a/Dev.Lau.Blazor.Authentication/Dev.Lau.Blazor.Authentication.csproj
+++ b/Dev.Lau.Blazor.Authentication/Dev.Lau.Blazor.Authentication.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.18.1" />
     <PackageReference Include="Microsoft.Identity.Web" Version="3.0.1" />
     <PackageReference Include="Microsoft.Identity.Web.UI" Version="3.0.1" />
     <PackageReference Include="Teqit.Extensions.Seq" Version="1.1.0" />
